Added Some Functionality and meaning to the demo website

--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <h1>Github Testing</h1>
-    <h2>Using this specially for checking git <b>add &amp commit</b> feature</h2>
-
+    <div>
+        <h1>Github Testing</h1>
+        <h2>Using this specially for checking git <b>add &amp commit</b> feature</h2>
+        
+        <br/>
+        <input placeholder="Enter Color"/>
+        <button>Change color</button>
+        <p></p>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
